Update SBRL ref to ICML

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -75,13 +75,14 @@ author  = {B. Letham and C. Rudin and T. H. McCormick and D. Madigan},
      pages={1350--1371}
 }
 
-@article{YangRuSe16,
+@inproceedings{YangRuSe16,
     title={Scalable {B}ayesian Rule Lists},
 __author={Hongyu Yang and Cynthia Rudin and Margo Seltzer},
     author={H. Yang and C. Rudin and M. Seltzer},
-    journal={Preprint at arXiv:1602.08610},
-    year={2016},
-    month=feb
+    __journal={Preprint at arXiv:1602.08610},
+    booktitle = {Proceedings of the 34th International Conference on Machine Learning},
+    series={ICML '17},
+    year={2017}
 }
 
 @inproceedings{GarofalakisHyRaSh00,
