--- a/paper/kdd17.tex
+++ b/paper/kdd17.tex
@@ -2,12 +2,11 @@
 
 \usepackage{booktabs} % For formal tables
 
-
 % Copyright
 %\setcopyright{none}
 %\setcopyright{acmcopyright}
-%\setcopyright{acmlicensed}
-\setcopyright{rightsretained} % <-- CHECK THIS
+\setcopyright{acmlicensed}
+%\setcopyright{rightsretained}
 %\setcopyright{usgov}
 %\setcopyright{usgovmixed}
 %\setcopyright{cagov}
@@ -15,17 +14,19 @@
 
 
 % DOI
-\acmDOI{http://dx.doi.org/10.1145/XXXXXXX.XXXXXXX} % <-- DOI AFTER RIGHTSREVIEW
+%\acmDOI{http://dx.doi.org/10.1145/XXXXXXX.XXXXXXX}
+\acmDOI{10.1145/3097983.3098047}
 
 % ISBN
 \acmISBN{978-1-4503-4887-4/17/08}
 
 %Conference
-\acmConference{KDD'17}{}{August 13--17, 2017, Halifax, NS, Canada.}
+%\acmConference{KDD'17}{}{August 13--17, 2017, Halifax, NS, Canada.}
+\acmConference{KDD '17}{August 13-17, 2017}{Halifax, NS, Canada}
 \acmYear{2017}
 \copyrightyear{2017}
 
-\acmPrice{15.00} % <-- CHECK THIS
+\acmPrice{15.00}
 
 % gets rid of optional ACM reference format
 \fancyhead{}
