--- a/paper/acmart.cls
+++ b/paper/acmart.cls
@@ -1287,7 +1287,8 @@ Computing Machinery]
   Association for Computing Machinery.
   \or % acmlicensed
   Copyright held by the owner/author(s). Publication rights licensed to
-  Association for Computing Machinery.
+  %Association for Computing Machinery.
+  ACM.
   \or % rightsretained
   Copyright held by the owner/author(s).
   \or % usgov
