--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -125,7 +125,7 @@ for ${\Reg = 0.04}$, $0.01$, and $0.025$, respectively.
 \begin{figure}[t!]
 \begin{center}
 % left lower right upper
-\includegraphics[trim={25mm 10mm 35mm 30mm},
+\includegraphics[trim={25mm 10mm 35mm 10mm},
 width=0.45\textwidth]{figs/weapon_reg_small-execution.pdf}
 \end{center}
 \caption{Example executions of CORELS, for the NYCLU stop-and-frisk dataset ($M = 28$).
@@ -149,32 +149,16 @@ from the panels to the left, for the three different~$\Reg$.
 \begin{figure}[t!]
 \begin{center}
 % left lower right upper
-\includegraphics[trim={20mm, 25mm, 24mm, 0mm}, width=0.45\textwidth]{figs/compas_execution-remaining-space.pdf}
+\includegraphics[trim={30mm 15mm 35mm 5mm}, width=0.45\textwidth]{figs/weapon_execution-remaining-space.pdf}
 \end{center}
-\caption{CORELS with (lines) and without
-(dashes) the equivalent points bound (Theorem~\ref{thm:identical}).
+\caption{CORELS and selected variants,
+for ProPublica (${\Reg = 0.005}$, ${M = 155}$) (left)
+and NYCLU (${\Reg = 0.01}$, ${M = 46}$) (right).
 %
-%Horizontal axes plot wall clock time (log scale).
-%
-Top: Objective value (thin line) and lower bound (thick line) for CORELS,
-and lower bound (dashes) for an execution without the equivalent points bound.
-%as a function of wall clock time (log scale).
-%
-Numbered points
-%along the objective
-indicate when the length of the best known rule list changes,
-and are labeled by the new length.
-%
-%CORELS quickly the optimal value (star marker),
-%and certifies optimality when the lower bound matches the objective value.
-A star marks the optimum.
-%
-% A separate execution of
-%CORELS without the equivalent points bound remains far from complete,
-%and its lower bound (dashed line) far from the optimum.
+Top: Objective value (thin solid lines) and lower bound (thick solid lines) for CORELS,
+as in Figure~\ref{fig:weapon-reg-execution}.
 %
 Bottom: $\lfloor \log_{10} \Remaining(\CurrentObj, \Queue) \rfloor$,
-%as a function of wall clock time,
 where~$\Remaining(\CurrentObj, \Queue)$
 is the upper bound on remaining search space size
 (Theorem~\ref{thm:remaining-eval-fine}).
@@ -193,26 +177,6 @@ the full CORELS implementation and variants that each remove a specific optimiza
 Figure~\ref{fig:queue} presents a view of the same experiments, focusing
 on three of our optimizations. These plots depict the number of
 prefixes of a given length in the queue during the algorithm's execution.
-
-\textit{State space pruning:}
-Figure~\ref{fig:objective} illustrates the effect of the most significant
-algorithm optimization, for the ProPublica dataset,
-on how quickly CORELS prunes the search space.
-%
-For CORELS, the objective (top, thin solid line) drops quickly,
-achieving the optimal value within 10 seconds.
-CORELS certifies optimality in less than 6 minutes --
-the objective lower bound (top, thick solid line) steadily
-converges to the optimal objective value as the search space shrinks
-(bottom, solid line).
-%
-In the same figure, we also plot the objective lower bound from
-a separate execution of CORELS without the equivalent points bound
-(Theorem~\ref{thm:identical}) (top, dashes).
-%
-After nearly 3 hours, the execution is still far from complete;
-in particular, the lower bound is far from the optimum objective value
-and much of the search space remains unexplored (bottom, dashes).
 
 \begin{table}[t!]
 \centering
@@ -270,3 +234,33 @@ in the other three subfigures.
 }
 \label{fig:queue}
 \end{figure}
+
+
+\textit{State space pruning:}
+Figure~\ref{fig:objective} highlights the most significant
+algorithm optimizations for our prediction problems,
+using the ProPublica (left) and NYCLU (right) datasets.
+%
+For CORELS (solid lines) with the ProPublica dataset (left),
+the objective drops quickly, achieving the optimal value within 10 seconds.
+%
+CORELS certifies optimality in less than 6 minutes:
+the objective lower bound steadily converges to the optimal objective (top)
+as the search space shrinks (bottom).
+%
+In the same plots (left), we additionally highlight
+a separate execution of CORELS without the equivalent points bound
+(Theorem~\ref{thm:identical}) (dashes).
+%
+After nearly 3 hours, the execution is still far from complete;
+in particular, the lower bound is far from the optimum objective value (top)
+and much of the search space remains unexplored (bottom).
+%
+For the NYCLU dataset (right),
+CORELS achieves the optimum objective in well under a second,
+and certifies optimality in less than a minute.
+%
+CORELS without the permutation bound (Corollary~\ref{thm:permutation}),
+and thus the symmetry-aware map,
+requires orders of magnitude more time to complete (dashes).
+
