Fix broken reference to appendix

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -699,9 +699,15 @@ rule mining~(\S\ref{sec:setup}).
 %
 Specifically, it implies that we should only mine rules with
 normalized support of at least~$\Reg$;
-we need not mine rules with a smaller fraction of observations.\footnote{We
-describe our application of this idea in Appendix~\ref{appendix:data},
-where we provide details on data processing.}
+we need not mine rules with a smaller fraction of
+\begin{arxiv}
+observations.\footnote{We describe our application of this idea in
+Appendix~\ref{appendix:data}, where we provide details on data processing.}
+\end{arxiv}
+\begin{kdd}
+observations.\footnote{We describe our application of this idea in the appendix
+of our long report~\citep{AngelinoLaAlSeRu17}.}
+\end{kdd}
 %
 In contrast, we can only apply Theorem~\ref{thm:min-capture-correct}
 in the context of constructing rule lists;
