Figure caption edit

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -149,11 +149,10 @@ Bottom right: Overlay of the three traces.
 % left lower right upper
 \includegraphics[trim={30mm 15mm 35mm 5mm}, width=0.45\textwidth]{figs/weapon_execution-remaining-space.pdf}
 \end{center}
-\caption{CORELS and selected variants,
-for ProPublica (${\Reg = 0.005}$, ${M = 155}$) (left)
-and NYCLU (${\Reg = 0.01}$, ${M = 46}$) (right).
+\caption{Significant algorithm optimizations
+for ProPublica (left) and NYCLU (right).
 %
-Top: Objective value (thin solid lines) and lower bound (thick solid lines) for CORELS,
+Top: Objective value (thin lines) and lower bound (thick lines) for CORELS,
 as in Figure~\ref{fig:weapon-reg-execution},
 and lower bound (dashes) from separate executions without
 the equivalent points (left) and permutation (right) bounds.
