Cynthia's conclusion edit ... rank the subgroups ...

--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -32,7 +32,7 @@ It could instead be used as a final classifier for image processing problems
 where the features were created beforehand; for instance, one could create classifiers
 for each part of an image, and use CORELS to create a final combined classifier.
 
-CORELS does not automatically choose the subgroup with the highest likelihood of a
+CORELS does not automatically rank the subgroups in order of the likelihood of a
 positive outcome; doing so would require an algorithm such as Falling Rule Lists \citep{WangRu15},
 which forces the estimated probabilities to decrease along the list.
 %
