Cynthia -- regularized empirical risk

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -54,7 +54,7 @@ Answering this question requires solving a computationally hard problem.
 %
 Namely, we would like to both find a transparent model that is optimal
 within a particular pre-determined class of models
-and produce a certificate of its optimality, with respect to the regularized risk.
+and produce a certificate of its optimality, with respect to the regularized empirical risk.
 %
 This would enable one to say, for this problem and model class,
 with certainty and before resorting to black box methods,
