Cynthia:  we don't parallelize

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -168,7 +168,7 @@ In addition, we are able to limit the number of nodes in the tree
 and thereby enable tuning of space-time tradeoffs in a robust manner.
 %
 This tree structure is a useful way of organizing the generation
-and evaluation of rule lists and is parallelizable.
+and evaluation of rule lists.
 
 \begin{arxiv}
 We evaluated CORELS on a number of publicly available datasets.
