Cynthia: add sentence on training vs. test performance

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -59,6 +59,10 @@ and produce a certificate of its optimality, with respect to the regularized emp
 This would enable one to say, for this problem and model class,
 with certainty and before resorting to black box methods,
 whether there exists a transparent~model.
+%
+While there may be differences between training and test performance,
+finding the simplest model with optimal training performance is prescribed by
+statistical learning theory.
 
 To that end, we consider the class of rule lists assembled from pre-mined frequent itemsets
 and search for an optimal rule list that minimizes a regularized risk function,~$R$.
