Cynthia: Add citation for Rudin and Ertekin to KDD version

--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -65,6 +65,11 @@ Our work builds specifically on that of \citet{YangRuSe16}.
 In particular, we use their library for efficiently representing and
 operating on bit vectors, and build on their bounds.
 %
+\begin{kdd} % in longer paragraph below in arxiv version
+Our bounds also build directly on work by~\citet{RudinEr15}, who provide
+flexible mixed-integer programming formulations for the same problem.
+\end{kdd}
+%
 Note that the
 \begin{kdd}
 1995
