Cynthia:  ours is technically an associative classification method

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -241,19 +241,20 @@ not captured by~$\Prefix$.
 In the remainder of our presentation, whenever we refer to a rule list with a
 particular prefix, we implicitly assume these empirically determined label predictions.
 
-Finally, we note that our approach leverages pre-mined rules,
-following the methodology taken by~\citet{LethamRuMcMa15} and~\citet{YangRuSe16}.
-%
-One of the results we later prove implies a constraint
-that can be used as a filter during rule mining --
-antecedents must have at least some minimum support
-\begin{arxiv}
-given by the lower bound in Theorem~\ref{thm:min-capture}.
-\end{arxiv}
-\begin{kdd}
-(Theorem~\ref{thm:min-capture}).
-\end{kdd}
-
+%Finally, we note that our approach leverages pre-mined rules,
+%following the methodology taken by~\citet{LethamRuMcMa15} and~\citet{YangRuSe16}.
+%%
+%One of the results we later prove implies a constraint
+%that can be used as a filter during rule mining --
+%antecedents must have at least some minimum support
+%\begin{arxiv}
+%given by the lower bound in Theorem~\ref{thm:min-capture}.
+%\end{arxiv}
+%\begin{kdd}
+%(Theorem~\ref{thm:min-capture}).
+%\end{kdd}
+Our method is technically an associative classification method since it
+leverages pre-mined rules.
 
 \subsection{Objective function}
 \label{sec:objective}
