Cynthia:  small edit

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -299,7 +299,7 @@ Our objective has structure amenable to global optimization via a branch-and-bou
 In particular, we make a series of important observations, each of which translates into
 a useful bound, and that together interact to eliminate large parts of the search~space.
 %
-We discuss these in depth throughout the following sections:
+We discuss these in depth in what follows:
 %
 \begin{itemize}
 \item Lower bounds on a prefix also hold for every extension of that prefix.
