Cynthia: replace footnote with citation to our work

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -337,13 +337,10 @@ we know that any model will make mistakes.
 In particular, the number of mistakes on these observations will be at least
 the number of observations with the minority label.
 (\S\ref{sec:identical}, Theorem~\ref{thm:identical})
-\begin{kdd}
-\footnote{Due to page constraints, we include only a few
-relevant proofs; we present additional theorems and all proofs
-in a long version of this report~\citep{AngelinoLaAlSeRu17}.}
-\end{kdd}
 \end{itemize}
-
+\begin{kdd}
+We present additional theorems and all proofs in~\citep{AngelinoLaAlSeRu17}.
+\end{kdd}
 
 \subsection{Hierarchical objective lower bound}
 \label{sec:hierarchical}
